# mercury

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  fly.toml
.github/actions/cargo-cache/: action.yml
.github/workflows/: check.yml  deploy.yml  temp.yml
src/: de.rs  error.rs  heroku.rs  main.rs  router.rs  slack.rs
src/heroku/: auth.rs  dashboard.rs  platform.rs  platforms.rs  router.rs  webhook.rs
src/heroku/platform/: slack.rs
src/slack/: api.rs  auth.rs  block.rs  channel.rs  error.rs  mention.rs  message.rs  router.rs
