[package]
name = "mercury"
version = "0.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.3", features = ["serde"] }
axum = { version = "0.6", features = ["headers", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "validate-request", "auth"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mockito = "1.0"
