[package]
name = "mercury"
version = "0.0.0"
edition = "2021"

[dependencies]
# Data
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
url = { version = "2.3", features = ["serde"] }

# Async
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }

# Environment
dotenvy = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Server
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "validate-request", "auth"] }
axum = { version = "0.6", features = ["headers", "macros"] }

# Client
reqwest = { version = "0.11", features = ["json"] }

# Testing
mockito = "1.0"
