[package]
name = "mercury"
version = "0.0.0"
edition = "2021"

[dependencies]
# Data
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6"
serde_json = "1.0"
serde_urlencoded = "0.7"
url = { version = "2.5", features = ["serde"] }

# Crypto
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"

# Async
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

# Environment
dotenvy = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Server
hyper = "1.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "validate-request", "auth"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# Testing
quickcheck = "1.0"
mockito = "1.2"
mock_instant = "0.3"
